<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_movetogoal</name>
  <version>2.0.0</version>
  <description>The turtlebot3_movetogoal package</description>
  <maintainer email="james.ttpts@gmail.com">Thitipong T.</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  
</package>
